--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,32 @@
+<head>
+  <style type="text/css">
+    p { margin-left:15em;
+    	margin-right:15em;
+    	font-family: sans-serif;
+    }
+  </style>
+</head>
+
 <div class="container image">
 </div>
-<div container>
 <center>
 <h1>Welcome to Project Maker</h1>
+<font size = "3">
+<strong>
   <p>Check out all the cool projects you can make!</p>
 
-  <p> Project Maker is a took that helps you organize the pieces of your senior project, while simultaneously teaching you skills that you will most likely encounter once you enter the career world (no matter what industry you go into). It uses much of the same verbiage and planning techniques as do companies.</p>
+  <p>Project Maker is a tool that helps you organize the pieces of your senior project, while simultaneously teaching you skills that you will most likely encounter once you enter the career world (no matter what industry you go into). It uses much of the same verbiage and planning techniques as do companies.</p>
 
   <p>We offer 8 different types of project templates, or if you are not sure what type of project you would like you can begin from scratch and customize your project from the beginning.</p>
-
+ </font>
+</strong>
+<br>
+<br>
 <p>
-  <%= link_to "Browse Projects", browse_index_path %>
+  <%= link_to '<button class="btn btn-primary" role="button" type="button">Browse Projects</button>'.html_safe, browse_index_path %>
+	<% if user_signed_in? %>
+		<%= link_to '<button class="btn btn-primary" role="button" type="button">Create New Project</button>'.html_safe, new_project_path %>
+	<%end%>
+
 </p>
 </center>
-</div>
