--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,11 +1,20 @@
 <%= form_for @project do |f| %>
-  <div class="form-group">
+
     <%= f.label :name %>
     <%= f.text_field :name, placeholder: "Project name", class: "form-control", autofocus: true %>
-  </div>
-  <div class="form-group">
-    <%= f.label :category %>
-    <%= f.text_field :category, placeholder: "Category", class: "form-control" %>
-  </div>
-  <%= f.submit "Save Project", class: "btn btn-block btn-default" %>
+
+     <%= f.label :description %>
+    <%= f.text_field :description, placeholder: "Descritption", class: "form-control" %>
+
+<br>
+    <select name="project[category_id]">
+      <%= @categories.each do |category| %>
+        <option value="<%= category.id %>"><%= category.name %></option>
+      <% end %>
+    </select>
+
+<br>
+<br>
+  <%= f.submit "Save Project", class: "btn btn-primary" %>
 <% end %>
+
